# DeviceAccess-CommandBasedBackend

./: .gitignore  CMakeLists.txt
DummyServer/: dummy-server.cpp  dummy-server.py  echo-server.py  readme.txt  serialport.cpp
include/: CheckSum.h  Checksum.h  CommandBasedBackend.h  CommandBasedBackendRegisterAccessor.h  CommandBasedBackendRegisterInfo.h  CommandBasedHardwareBackend.h  CommandBasedRegisterAccessor.h  CommandHandler.h  Protocol.h  SerialCommandHandler.h  SerialPort.h  TcpCommandHandler.h  TcpCtrl.h  TcpSocket.h  injaUtils.h  jsonUtils.h  mapFileKeys.h  serialport.h  stringUtils.h
src/: CheckSum.cc  Checksum.cc  CommandBasedBackend.cc  CommandBasedBackend.cpp  CommandBasedBackendRegisterAccessor.cc  CommandBasedBackendRegisterAccessor.cpp  CommandBasedBackendRegisterInfo.cc  CommandBasedHardwareBackend.cc  CommandHandler.cc  Protocol.cc  SerialCommandHandler.cc  SerialCommandHandler.cpp  SerialPort.cc  SerialPort.cpp  TcpCommandHandler.cc  TcpCtrl.cc  TcpSocket.cc  TcpSocket.cpp  fe_mylib.cpp  injaUtils.cc  jsonUtils.cc  stringUtils.cc  stringUtils.cpp
tests/: CMakeLists.txt  DummyServer-stand-alone.cpp  DummyServer.cpp  DummyServer.h  configureDMap.sh  devices.dmap.template  dummy-server.cpp  mock.dmap  mock.map  partialAcc.xlmap  run_socat.sh  test.json  testAccessorMerging.cc  testBinary.cc  testChechSum.cc  testChecksum.cc  testCommandBasedBackendUnified.cc  testCommandBasedBackendUnified.cpp  testJsonUtils.cc  testPortaCount.cpp  testSerialPort.cc  testStringUtils.cc  testVoidWrite.cc  testVoidWrite.cpp  test_serialPort.cpp
tests/DummyServerLib/: DummyServer.cc  DummyServer.cpp  DummyServer.h
tests/manual_tests/: DummyServer-stand-alone.cc  DummyServer-stand-alone.cpp  devices.dmap
tests/src/: testCommandBasedHardwareBackend.cpp  testTcpConnection.cc
